# Super-Ducky

./: README.md
3dmodels/: MTFC16GAKAEDQ-AIT.stp  UP31-CV-G-CM.step  XJHCELNANF-12MHZ.stp
Pics & Schematics/Billing/: Biling.xlsx  Biling_JLCPCB_COMPONENTS-GLOBAL-SOURCING.xlsx  Biling_JLCPCB_COMPONENTS.xlsx  DIGIKEY.xlsx
Symbols/: 0603WAF1002T5E.kicad_sym  0603WAF120JT5E.kicad_sym  0603WAF5101T5E.kicad_sym  AP2112K-1_8TRG1.kicad_sym  AP2112K-3.3TRG1.kicad_sym  CC0603KRX7R9BB104.kicad_sym  CL10A105KB8NNNC.kicad_sym  EVQ-P7A01P.kicad_sym  LQH2MPN100MGRL.kicad_sym  MTFC16GAKAEDQ-AIT.kicad_sym  TPD4E05U06DQAR.kicad_sym  UP31-CV-G-CM.bak  UP31-CV-G-CM.kicad_sym  W25Q128JVSIM_TR.kicad_sym
firmware/: CMakeLists.txt  emmc.c  emmc.h  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
footprints/: BGA100C100P10X17_1400X1800X140.kicad_mod  CAPC1608X90.kicad_mod  CAPC1608X90N.kicad_mod  CAPC608X90N.kicad_mod  CUI_UP31-CV-G-CM.kicad_mod  IC_TPD4E05U06DQAR.kicad_mod  IC_TPD6E001RSER.kicad_mod  IND_LQH2MPN100MGRL.kicad_mod  REC1608X55N.kicad_mod  RESC1608X55N.kicad_mod  RP2350A_QFN-60_EP_7.75x7.75_Pitch0.4mm.kicad_mod  RSC1608X55N.kicad_mod  SOIC127P790X216-8N.kicad_mod  SOT95P285X140-5N (2).kicad_mod  SOT95P285X140-5N.kicad_mod  SOT95P285X1405N.kicad_mod  SW_EVQ-P7A01P.kicad_mod
journal/: JOURNAL.txt
pcb/: Stealth Ducky.kicad_pcb  Stealth Ducky.kicad_prl  Stealth Ducky.kicad_pro  Stealth Ducky.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
